tests/test103.rael.exp
Error [tests/test103.rael:1:19]: Expected an expression after 'through'
| loop :232 through {
|                   ^
